--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,12 @@
 <div class="header">
   <h1>Bienvenido a Crowsourcing!</h1>
   <% if session[:uname] %>
-  	<p> estas conectado como <%= session[:uname] %>  </p>
+  	<p> estas conectado como <%= session[:uname] %>  |   <%= button_to 'Logout', logout_path, method: :delete %></p>
   <% else %>
   	<p> estas conectado como visitante  </p>	
   <% end %>
   </br>
-  <p>hola #<%= session[:user_id] %></p>
+   <% if session[:uname] %>
+  	<p>hola <%= session[:user_name_complete] %></p>
+   <% end %> 
 </div>
