ajustes esteticos y traducciones

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Back', home_path %>
+<%= link_to 'Mostrar', @comment %> |
+<%= link_to 'Inicio', home_path %>
