--- a/app/views/funders/index.html.erb
+++ b/app/views/funders/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= funder.user_id %></td>
         <td><%= funder.perk_id %></td>
-        <td><%= link_to 'Show', funder %></td>
-        <td><%= link_to 'Edit', edit_funder_path(funder) %></td>
-        <td><%= link_to 'Destroy', funder, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Show', funder %></td>
+        <td><%#= link_to 'Edit', edit_funder_path(funder) %></td>
+        <td><%#= link_to 'Destroy', funder, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
