--- a/app/views/perks/show.html.erb
+++ b/app/views/perks/show.html.erb
@@ -14,5 +14,5 @@
   
 </div>
 
-<%= link_to 'Edit', "/perks/" + @perk.id.to_s + "/edit/" + @project.id.to_s %> |
-<%= link_to 'Back', home_path %>
+<%= link_to 'Editar', "/perks/" + @perk.id.to_s + "/edit/" + @project.id.to_s %> |
+<%= link_to 'Inicio', home_path %>
