--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,35 @@
+            <!--aqui-->
+            <script type='text/javascript'>
+           
+            function validateFiles(inputFile) {
+              var maxExceededMessage = "El Archivo excede el limite pérmitido (60 KB)";
+              var extErrorMessage = "Solo se aceptan extenciones: .jpg, .jpeg, .gif or .png ";
+              var allowedExtension = ["jpg", "jpeg", "gif", "png"];
+             
+              var extName;
+              var maxFileSize = $(inputFile).data('max-file-size');
+              var sizeExceeded = false;
+              var extError = false;
+             
+              $.each(inputFile.files, function() {
+                if (this.size && maxFileSize && this.size > parseInt(maxFileSize)) {sizeExceeded=true;};
+                extName = this.name.split('.').pop();
+                if ($.inArray(extName, allowedExtension) == -1) {extError=true;};
+              });
+              if (sizeExceeded) {
+                window.alert(maxExceededMessage);
+                $(inputFile).val('');
+              };
+             
+              if (extError) {
+                window.alert(extErrorMessage);
+                $(inputFile).val('');
+              };
+            }
+            </script>
+            <!-- aqui-->
+
+
 <%= form_for(@project) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
@@ -17,11 +49,11 @@
   </div>
   <div class="field">
     <%= f.label :image_id %><br>
-    <%= f.file_field :image_id %>
+    <%= f.file_field :image_id ,:onchange =>"validateFiles(this);",:data => {:max_file_size => 60.kilobytes} %>
   </div> 
   <div class="field">
     <%= f.label :monetary_goal %><br>
-    <%= f.text_field :monetary_goal %>
+    <%= f.text_field :monetary_goal , :step => 0.01%>
   </div>
   <div class="field">
     <%= f.label :init_date %><br>
