--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', home_path %>
+<%= link_to 'Mostrar', @project %> |
+<%= link_to 'Inicio', home_path %>
