--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username %><br>
+    <%= f.label :username %></br>
     <%= f.text_field :username %>
   </div>
   <div class="field">
-    <%= f.label :password %><br>
+    <%= f.label :password %></br>
     <%= f.password_field :password %>
   </div>
   <div>
-    <%= f.label :password_confirmation %><br>
+    <%= f.label :password_confirmation %></br>
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="field">
-    <%= f.label :email %><br>
+    <%= f.label :email %></br>
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :nombre %><br>
+    <%= f.label :nombre %></br>
     <%= f.text_field :nombre %>
   </div>
   <div class="actions">
